--- a/main.html
+++ b/main.html
@@ -8,6 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class = "container">
+		<h1 id="verification_heading">Verify Your Account</h1>
+		<p id="verification_subtext">We emailed you the six digit code to acciojob@email.com Enter the code below to confirm your email address.</p>
+
+	 <div class ="code-container">
+	   <div class ="code" contenteditable="true"></div>
+	   <div class ="code" contenteditable="true"></div>
+	   <div class ="code" contenteditable="true"></div>
+	   <div class ="code" contenteditable="true"></div>
+	   <div class ="code" contenteditable="true"></div>
+	   <div class ="code" contenteditable="true"></div>
+	 </div>
+	
+	
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
