--- a/main.html
+++ b/main.html
@@ -14,12 +14,12 @@
  
 	 <div class="code-container">
 		 
-         <input type="text" maxlength="1" class="code">
-         <input type="text" maxlength="1" class="code">
-         <input type="text" maxlength="1" class="code">
-         <input type="text" maxlength="1" class="code">
-         <input type="text" maxlength="1" class="code">
-         <input type="text" maxlength="1" class="code">
+         <input type="text" maxlength="1" class="code" id="code-1">
+         <input type="text" maxlength="1" class="code" id="code-2">
+         <input type="text" maxlength="1" class="code" id="code-3">
+         <input type="text" maxlength="1" class="code" id="code-4">
+         <input type="text" maxlength="1" class="code" id="code-5">
+         <input type="text" maxlength="1" class="code" id="code-6">
 
 	 </div>
 	</div>
